--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -53,7 +53,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_margin="5dp"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:contentDescription="TODO" />
 
             </RelativeLayout>
 
